--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,6 +32,7 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         <br>
         <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="onLoginButtonClick()">login</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="onLogoutButtonClick()">logout</button>
       </form>
     </div>
   </nav>
