--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -32,6 +32,10 @@
           <p class="text-center">
               <a routerLink="/register">New User? Click Here</a>
           </p>
+          <br><br>
+          <p class="text-center">
+            <a routerLink="/login/admin">Click Here for admin login</a>
+        </p>
           <input type="button" (click)="onTest()" value="Test" class="btn btn-primary btn-block">
       </div>
     </div>
