--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,13 @@
-<p>search works!</p>
+<h1>Search</h1>
+
+<div class="container">
+    <div class="col-lg-4">
+        <app-titlesearch></app-titlesearch>
+    </div>
+    <div class="col-lg-4">
+        <app-isbnsearch></app-isbnsearch>
+    </div>
+    <div class="col-lg-4">
+        <app-authorsearch></app-authorsearch>
+    </div>
+</div>
